<resources>
    <string name="app_name">Casino</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="toca_la_pantalla_para_dirigirte_al_men">Toca la pantalla para dirigirte al menú</string>
    <string name="casino_universidad">Casino\nUniversidad Autónoma</string>
    <string name="elige_una_opci_n">Elige una opción:</string>
    <string name="bebidas">Bebidas</string>
    <string name="postres">Postres</string>
    <string name="almuerzos">Almuerzos</string>
    <string name="frutas">Frutas</string>
    <string name="comida_nr_pida">Comida \nRápida</string>
    <string name="galletas">Galletas</string>
    <string name="sandwich">Sandwich</string>
    <string name="helados">Helados</string>
    <string name="t_caf">Té-Café</string>
    <string name="bebidas_n_250cc">Bebidas \n(250cc)</string>
    <string name="jugo_caja">Jugo Caja</string>
    <string name="jugo_nbotella">Jugo\nBotella</string>
    <string name="aguas">Aguas</string>
    <string name="energ_ticas">Energéticas</string>
    <string name="bebidas_n_500cc">Bebidas\n(500cc)</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="precio">Precio</string>
    <string name="tus_productos">Tus Productos:</string>
    <string name="total">Total:</string>
    <string name="jugos_ncajas">Jugos\nCajas</string>
    <string name="donas">Donas</string>
    <string name="cupcake">Cupcake</string>
    <string name="tartas">Tartas</string>
    <string name="tortas">Tortas</string>
    <string name="gaseosas">Gaseosas</string>
    <string name="jugos">Jugos</string>
    <string name="bebidas2">Bebidas</string>
    <string name="men_njunaeb">Menú\nJunaeb</string>
    <string name="men_np_blico">Menú\nPúblico</string>
    <string name="men_nvegetariano">Menú\nVegetariano</string>
    <string name="pizzas">Pizzas</string>
    <string name="chaparritas">Chaparritas</string>
    <string name="manzanas">Manzanas</string>
    <string name="pl_tanos">Plátanos</string>
    <string name="galletas2">Galletas</string>
    <string name="sandwich2">Sandwich</string>
    <string name="t_cafe">Té-Café</string>
    <string name="detalle_de_la_comanda">Detalle de la Comanda:</string>
    <string name="completos">Completos</string>
    <string name="iniciar_sesi_n">iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
</resources>