<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="38dp" />

    <View
        android:id="@+id/image_6"
        android:layout_width="104dp"
        android:layout_height="59dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo"
        />

    <TextView
        android:id="@+id/casino_univ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bree_serif"
        android:gravity="bottom"
        android:text="@string/casino_universidad"
        android:textAppearance="@style/casino_univ"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bree_serif"
        android:gravity="top"
        android:lineHeight="87sp"
        android:text="@string/bienvenidos"
        android:textAppearance="@style/bienvenido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btniniciosesion"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bienvenido"
        app:layout_constraintBottom_toTopOf="@id/btnregistro"
        android:layout_marginTop="40dp"
        android:background="@drawable/redondo"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/white"
        android:fontFamily="@font/bree_serif"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnregistro"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/redondo"
        android:fontFamily="@font/bree_serif"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btniniciosesion" />

</androidx.constraintlayout.widget.ConstraintLayout>